<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box one</string>
    <string name="box_two">Box two</string>
    <string name="box_three">Box three</string>
    <string name="box_four">Box four</string>
    <string name="box_five">Box five</string>
    <string name="red_button">Red</string>
    <string name="blue_button">Blue</string>
    <string name="orange_button">Orange</string>
    <string name="how_to_play">How to Play?</string>
    <string name="click_on_screen_to_Change_color">Click on screen to change color</string>
</resources>
