<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/box1_text"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginBottom="16dp"
        android:text="@string/box_one"
        app:layout_constraintBottom_toTopOf="@+id/box2_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/box2_text"
        style="@style/WhiteBox"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/box_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box1_text" />

    <TextView
        android:id="@+id/box3_text"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/box_three"
        app:layout_constraintBottom_toTopOf="@+id/box4_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/box2_text"
        app:layout_constraintTop_toTopOf="@+id/box2_text" />

    <TextView
        android:id="@+id/box4_text"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:text="@string/box_four"
        app:layout_constraintBottom_toTopOf="@+id/box5_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/box2_text"
        app:layout_constraintTop_toBottomOf="@+id/box3_text" />

    <TextView
        android:id="@+id/box5_text"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        android:text="@string/box_five"
        app:layout_constraintBottom_toBottomOf="@+id/box2_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/box2_text"
        app:layout_constraintTop_toBottomOf="@+id/box4_text" />

    <Button
        android:id="@+id/red_button"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:text="@string/red_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/blue_button"
        app:layout_constraintEnd_toStartOf="@+id/blue_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/blue_button"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/blue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/orange_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/red_button" />

    <Button
        android:id="@+id/orange_button"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:text="@string/orange_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/blue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/blue_button" />

    <TextView
        android:id="@+id/guide_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/how_to_play"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/red_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box2_text"
        app:layout_constraintVertical_bias="0.278" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/click_on_screen_to_Change_color"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/guide_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guide_text" />
</androidx.constraintlayout.widget.ConstraintLayout>